@startuml uml_ui
title UI Module (arena.ui) — Simplified

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam class {
    BackgroundColor White
    BorderColor Black
}
skinparam package {
    BackgroundColor #FCE4EC
    BorderColor #880E4F
}
skinparam note {
    BackgroundColor #FFFDE7
    BorderColor #F9A825
}

hide empty members

package "arena.ui (entry)" {

    class GameSetup {
        + playerClass : String
        + itemSlot1 : String
        + itemSlot2 : String
        + difficulty : String
        + customOpponentType : String
        + customQteEnabled : boolean
    }

    class GameStartRequest <<record>> {
        + setup : GameSetup
        + fullScreen : boolean
        + asciiMode : boolean
    }

    class StartMenu <<Static>> {
        + {static} launch(screen, gui, ..., onStart) : void
        + {static} applyUniformButtonTheme(gui) : void
    }
}

package "arena.ui.screen (battle)" {

    class ArenaBattleScreen {
        + initialize(screen, gui, ...) : void
        + setCallbacks(callbacks) : void
        + render(state) : void
        + showAndWait(state) : void
        + setDamageOffsets(player, enemies) : void
        + close() : void
    }

    interface ActionCallbacks {
        + onBasicAttack(targetIndex) : void
        + onDefend() : void
        + onUseItem(itemIndex, targetIndex) : void
        + onSpecialSkill(targetIndex) : void
        + onBackToMenu() : void
    }

    class EndgameScreen <<Static>> {
        + {static} show(screen, gui, victory, ..., cb) : void
    }

    interface EndgameCallbacks {
        + onReplaySameSettings() : void
        + onStartNewGame() : void
        + onQuit() : void
    }
}

package "arena.ui.model (view state)" {

    class ArenaViewState {
        + playerState : PlayerViewState
        + aliveEnemies : List<EnemyViewState>
        + combatLog : List<String>
        + victory / defeat : boolean
        ..
        + getCurrentTarget() : EnemyViewState
        + isGameOver() : boolean
    }

    class PlayerViewState {
        + name, type, spriteKey : String
        + currentHp, maxHp, attack : int
        + activeEffects : List<StatusIconViewState>
        + floatingDamage : Integer
    }

    class EnemyViewState {
        + name, type, spriteKey : String
        + currentHp, maxHp : int
        + isAlive : boolean
        + floatingDamage : Integer
        ..
        + getHpPercent() : int
    }
}

' ── Relationships ──────────────────────────────
GameStartRequest   *--  GameSetup
StartMenu          ..>  GameStartRequest : produces

ArenaBattleScreen  ..>  ActionCallbacks  : uses
ArenaBattleScreen  -->  ArenaViewState   : renders

EndgameScreen      ..>  EndgameCallbacks : uses

ArenaViewState     *--  PlayerViewState
ArenaViewState     *--  EnemyViewState

' ── Sticky notes ───────────────────────────────
note as N_EXCL #FFFDE7
  <b>Excluded from this diagram:</b>
  arena.ui.sprite  — AsciiSprite, SpriteCatalog
  arena.ui.util    — DialogComposer, CustomBorder,
                     ScreenUtil, TextFormatUtil,
                     ViewMapperUtil
  arena.ui.screen  — setup screens (PlayerSelection,
                     ItemSelection, DifficultySelection,
                     EnemyInformation, CustomModeSetup),
                     ArenaLayoutCalculator,
                     ArenaPreviewStateFactory,
                     TimingBarQteView
  Also excluded:   ArenaViewStateMapper
end note

note as N_WHY #FFFDE7
  <b>Why the UI is simplified here:</b>
  The sprite and util packages are purely rendering
  helpers with no domain or control-flow logic.
  The setup screens are orchestrated by StartMenu
  and do not interact with the engine directly.
  ArenaViewStateMapper is an internal translation
  layer — its structure adds no architectural insight
  at this level. Showing these would obscure the key
  relationships between GameApp, BattleEngine,
  and the view-state model.
end note

@enduml
